syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc send (KeyManagerGrpcRequest) returns (KeyManagerGrpcReply) {}
}

service KeyManagerRegistraService {
  rpc registra(RegistrarChavePixRequest) returns (RegistrarChavePixResponse) {}
}

service KeyManagerRemoveService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service KeyManagerConsultaService {
  rpc consulta(ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}
}

service KeyManagerListaService {
  rpc lista(ListaChavePixRequest) returns (ListaChavePixResponse) {}
}

enum TipoChave {
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistrarChavePixRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}

message RegistrarChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest {
  string pixId = 1;
  string clienteId = 2;
}

message RemoveChavePixResponse {
  string resultado = 1;
}

message ConsultaChavePixRequest {
  message FiltroPorPixId {
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message ConsultaChavePixResponse {
  message ChavePix {
    message ContaInfo {
      TipoConta tipo = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    TipoChave tipo = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }
  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}

message ListaChavePixRequest {
  string clienteId = 1;
}

message ListaChavePixResponse {
  message ChavePixDetails {
    string pixId = 1;
    string clienteId = 2;
    TipoChave tipoChave = 3;
    string valorChave = 4;
    TipoConta tipoConta = 5;
    google.protobuf.Timestamp criadaEm = 6;
  }
  string clienteId = 1;
  repeated ChavePixDetails chaves = 2;
}

message KeyManagerGrpcRequest {
  string name = 1;
}

message KeyManagerGrpcReply {
  string message = 1;
}